refactoring of customer and order process for microservice; removal of many classes and tests; added placeOrder test with mocked clients